# google-contacts-birthday-ical-calendar

./: .editorconfig  .gitignore  .yamllint  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
google_contacts_birthday_ical_calendar/: converter.py
src/: cli.py
src/google_contacts_birthday_ical_calendar/: convert_csv_to_ical.py
tests/: test_google_contacts_birthday_ical_calendar.py
tests/fixtures/: example.csv
