[tool.poetry]
name = "google_contacts_birthday_ical_calendar"
version = "0.0.0"
description = "Google Contacts birthday to iCal calendar converter"
authors = ["Felix Boerner <ich@felix-boerner.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
icalendar = "^6.1.0"
click = "^8.1.7"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-loguru = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.black]
preview = true

[tool.isort]
profile = "black"
