[tool.poetry]
name = "google_contacts_birthday_ical_calendar"
version = "0.0.0"
description = "Google Contacts birthday to iCal calendar converter"
authors = ["Felix Boerner <ich@felix-boerner.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
icalendar = "^6.1.2"
click = "^8.1.8"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-loguru = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.black]
preview = true

[tool.isort]
profile = "black"
