[project]
name = "google-contacts-birthday-ical-calendar"
version = "0.0.0"
description = "Google Contacts birthday to iCal calendar converter"
authors = [
    { name = "Felix Börner" }
]
license-files = [
    "LICENSE"
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dynamic = ["dependencies"]

[project.scripts]
google-contacts-birthday-ical-calendar = "google_contacts_birthday_ical_calendar.cli:cli"

[tool.poetry.dependencies]
click = "^8.2.0"
loguru = "^0.7.3"
icalendar = "^6.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-loguru = "^0.4.0"

[tool.black]
preview = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--cov=src/",
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
